# vitallm

./: .gitignore  README.md  netlify.toml  pyproject.toml
.docs/: index.md
benchmarks/: README.md  answer_quality_v1.json  formulation_optimizer_v1.json  no_answer_intent_v1.json  retrieval_quality_v1.json  retrieval_smoke.json
configs/: local.hash.yaml  local.semantic.yaml  local.yaml
reports/: cn_enzyme_alias_paired_after_doc_scope_fix_20260527.md  cn_enzyme_alias_paired_round3_final_20260528.md  leader_brief_mvp.md  local_api_stress_dashboard_cache_lock_20260525.json  local_api_stress_dashboard_cache_lock_20260525.md  local_api_stress_non_llm_20260525_0950.json  local_api_stress_non_llm_20260525_0950.md  local_api_stress_post_fix_non_llm_20260525.json  local_api_stress_post_fix_non_llm_20260525.md  local_api_stress_post_fix_smoke_20260525.json  local_api_stress_post_fix_smoke_20260525.md  local_api_stress_smoke.json  local_api_stress_smoke.md  local_api_stress_stream_20260525_0958.json  local_api_stress_stream_20260525_0958.md  local_api_stress_summary_20260525.md  pdf_ingestion_gap_status_20260527_after_fix.csv  pdf_ingestion_gap_status_20260527_after_fix.md  qa_failure_debug_round3_final_20260528.md  qa_failure_delta_round3_final_20260528.md  qa_system_220_after_doc_scope_fix_20260527.md  qa_system_232_after_doc_scope_fix_20260527.md  qa_system_232_round3_final_20260528.md  qa_system_after_doc_scope_fix_failure_buckets_20260527.md  retrieval_window_latency_20260527.md  siliconflow_ttft_benchmark.json  siliconflow_ttft_benchmark.md  siliconflow_ttft_system_path.md  (+3 more)
(+140 files in other folders)
