[project]
name = "enzyme-immobilization-recommender"
version = "0.1.0"
description = "MVP data contracts and ingestion clients for evidence-based enzyme immobilization recommendations."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "pypdf>=6.0,<7",
  "uvicorn[standard]>=0.30,<1",
  "sentence-transformers>=3.0,<4",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
